<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="000000"
        android:key="pref_medtronic_serial"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:numeric="integer"
        android:title="@string/pref_pump_id" />

    <EditTextPreference
        android:title="@string/pref_user_max_bolus"
        android:key="pref_user_max_bolus"
        android:numeric="integer"
        android:summary="" />

    <EditTextPreference
        android:title="@string/pref_user_max_basal_rate"
        android:key="pref_user_max_basal_rate"
        android:numeric="decimal"
        android:summary="" />

    <EditTextPreference
        android:title="@string/pref_user_max_basal_duration"
        android:key="pref_user_max_basal_duration"
        android:numeric="integer"
        android:summary="" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/medtronicPumpFreqArray"
        android:entryValues="@array/medtronicPumpFreqArray"
        android:key="pref_medtronic_frequency"
        android:selectable="true"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/medtronic_pump_frequency" />

    <ListPreference
        android:defaultValue="@string/medtronic_pump_encoding_4b6b_rileylink"
        android:entries="@array/medtronicEncoding"
        android:entryValues="@array/medtronicEncoding"
        android:key="pref_medtronic_encoding"
        android:selectable="true"
        android:title="@string/medtronic_pump_encoding" />


</PreferenceScreen>